<resources>
    <string name="app_name">HiArchitectPro</string>
    <string name="if_home">&#xe8c6;</string>
    <string name="if_recommend">&#xe63f;</string>
    <string name="if_chat">&#xe63c;</string>
    <string name="if_profile">&#xe634;</string>
    <string name="if_category">&#xf00a6;</string>
    <string name="if_favorite">&#xe639;</string>
    <string name="if_favorite1">&#xe620;</string>

    <string name="if_unexpected">&#xe606;</string>
    <string name="if_unexpected1">&#xe692;</string>
    <string name="if_empty">&#xe601;</string>
    <string name="if_wifi_error">&#xe876;</string>
    <string name="if_wifi_error1">&#xe501;</string>
    <string name="if_back">&#xe607;</string>
    <string name="if_error_tips">&#xe648;</string>
    <string name="if_back_soild">&#xe680;</string>

    <string name="if_notify">&#xe654;</string>
    <string name="if_history">&#xe606;</string>
    <string name="if_address">&#xe603;</string>
    <string name="if_collection">&#xe604;</string>
    <string name="if_search">&#xe987;</string>
    <string name="if_clear">&#xe60b;</string>
    <string name="if_delete">&#xe60a;</string>
    <string name="if_empty1">&#xe637;</string>
    <string name="if_empty2">&#xe6cf;</string>
    <string name="if_empty3">&#xe60c;</string>
    <string name="if_history2">&#xe6d0;</string>
    <string name="if_notice_msg">&#xe609;</string>
    <string name="if_notice_recommend">&#xe608;</string>
    <string name="if_goods">&#xe6d1;</string>
    <string name="if_share">&#xe60d;</string>
    <string name="if_shop">&#xe895;</string>
    <string name="if_like">&#xe60e;</string>
    <string name="if_add">&#xe62b;</string>
    <string name="if_location">&#xe60f;</string>
    <string name="if_close">&#xe611;</string>
    <string name="if_checked">&#xe612;</string>
    <string name="if_checked2">&#xe62c;</string>
    <string name="if_right_arrow">&#xe669;</string>
    <string name="if_alipay">&#xe674;</string>
    <string name="if_wxpay">&#xe62d;</string>
    <string name="if_detail">&#xeb93;</string>

    <string name="degrade_title">错误提示</string>
    <string name="degrade_tips">页面跑远了,开发小哥正在加急修复中...</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="input_item_title_user_name">用户名</string>
    <string name="input_item_hint_user_name">请输入用户名</string>
    <string name="login_desc_forget_pwd">提示：如果你忘记了密码，重新注册即可</string>
    <string name="input_item_desc_pwd">请输入密码</string>
    <string name="input_item_title_pwd">密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登陆失败:</string>
    <string name="input_item_title_course_order_id">课程订单号</string>
    <string name="input_item_hint_order_id">请输入课程的订单号后四位</string>
    <string name="action_submit">提交</string>
    <string name="input_item_title_moocid">慕课账号ID</string>
    <string name="input_item_hint_moocid">请输入慕课账号ID</string>
    <string name="input_item_hint_pwd">请输入密码</string>
    <string name="input_item_hint_pwd2">请再次输入密码</string>
    <string name="input_item_title_pwd2">确认密码</string>
    <string name="item_collection">&#xe604;   我的收藏</string>
    <string name="item_notify">&#xe654;  课程通知</string>
    <string name="item_history">&#xe606;   浏览历史</string>
    <string name="item_address">&#xe603;   收货地址</string>
    <string name="profile_login_desc_welcome_back">Hi，欢迎回来</string>
    <string name="profile_not_login">请先登陆</string>
    <string name="profile_login_desc">解锁全部功能,畅享架构师专属福利</string>
    <string name="profile_tab_item_collection">\n收藏</string>
    <string name="profile_tab_item_history">\n历史浏览</string>
    <string name="profile_tab_item_learn">\n学习时长</string>
    <string name="home_search_hint">&#xe987;  搜索你想要的商品</string>
    <string name="title_category">分类</string>
    <string name="error_navigation_tips">错误提示页</string>
    <string name="toast_error_degrade">页面错误，开发小哥正在加速修复中…</string>
    <string name="person_center">个人中心</string>
    <string name="authentication">会员权益</string>
    <string name="vip_cash">账户充值</string>
    <string name="all_low">全局降级策略</string>

    <string name="list_empty">&#xe60c;</string>
    <string name="list_empty_desc">小朋友,你是否有很多问号？</string>
    <string name="list_empty_action">刷新一把</string>
    <string name="footer_loading_text">正在加载...</string>

    <string name="nav_item_search">搜索</string>
    <string name="search_hint">试试输入iphone搜索</string>
</resources>