<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.sum.hi.common.view.IconFontTextView
            android:id="@+id/action_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/if_back_soild"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/empty_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/error_navigation_tips"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f1f1f1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_title" />

    <TextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/color_999"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line"
        tools:text="虽然什么也没有，要不下拉刷新来看看" />

    <com.sum.hi.common.view.IconFontTextView
        android:id="@+id/empty_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:gravity="center"
        android:textColor="@color/color_9b9"
        android:textSize="20sp"
        android:text="@string/if_detail"
        app:layout_constraintBottom_toBottomOf="@+id/empty_text"
        app:layout_constraintStart_toEndOf="@+id/empty_text"
        app:layout_constraintTop_toTopOf="@+id/empty_text" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="刷新"
        android:layout_marginTop="10dp"
        android:background="@color/color_999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_tips" />

</androidx.constraintlayout.widget.ConstraintLayout>