<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">

        <com.sum.hi.common.view.IconFontTextView
            android:id="@+id/tv_back"
            android:layout_width="@dimen/dp_45"
            android:layout_height="@dimen/dp_45"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/if_back"
            android:textSize="24sp" />
        <!--如果能使用已知的值就使用已知值，比如固定值和match_parent,wrap_content会增加测量的次数-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/title_login"
            android:textColor="@color/color_000"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/action_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/title_register"
            android:textColor="@color/color_298"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_d1d2" />

    <com.sum.hi.common.view.InputItemLayout
        android:id="@+id/input_item_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="16dp"
        app:bottomLineAppearance="@style/lineAppearance"
        app:hint="请输入用户名"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:title="用户名"
        app:titleTextAppearance="@style/titleTextAppearance" />

    <com.sum.hi.common.view.InputItemLayout
        android:id="@+id/input_item_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingEnd="16dp"
        app:bottomLineAppearance="@style/lineAppearance"
        app:hint="请输入密码"
        app:inputTextAppearance="@style/inputTextAppearance"
        app:title="密码"
        app:titleTextAppearance="@style/titleTextAppearance" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        app:backgroundTint="@color/color_dd2"
        app:cornerRadius="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="提示：如果你忘记密码，重新注册即可"
        android:textColor="@color/color_646"
        android:textSize="12sp" />

</LinearLayout>